naprawilem rejestracje i logowanie